01_openshift_console.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-api
  namespace: kube-system
spec:
  selector:
    app: flannel
  ports:
  - port: 6443
    targetPort: 6443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openshift-console-deployment
  namespace: kube-system
  labels:
    app: openshift-console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openshift-console
  template:
    metadata:
      labels:
        app: openshift-console
    spec:
      containers:
      - name: openshift-console-app
        image: quay.io/openshift/origin-console:4.8.0
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
---
apiVersion: v1
kind: Service
metadata:
  name: openshift-console-service
  namespace: kube-system
spec:
  selector:
    app: openshift-console
  ports:
  - port: 80
    targetPort: 9000
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: openshift-console
  namespace: kube-system
spec:
  #host: openshift-console.apps.127.0.0.1.nip.io
  to:
    kind: Service
    name: openshift-console-service
    weight: 100
  port:
    targetPort: 9000
  wildcardPolicy: None
